--- a/style.css
+++ b/style.css
@@ -1,39 +1,57 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
-    
-    
-    color: white;
+  height: 100vh;
+  width: 100vw;
 
+  color: white;
 }
-
 
 .header-main {
-    height: 100%;
-    width: 100%;
-    background-image: url("assets/images/supriya.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
+  height: 100%;
+  width: 100%;
+  background-image: url("assets/images/supriya.png");
+  position: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 nav a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
+  font-size: large;
 }
 
-nav {
-    
+.header-main nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  gap: 2px;
+  border-bottom: 2px solid red;
+  width: 100%;
 }
+
+.name {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  top: 200px;
+  left: 5px;
+
+}
+
+
 
 
