--- a/style.css
+++ b/style.css
@@ -2,18 +2,21 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  
+
 }
 
 body {
   height: 100vh;
   width: 100vw;
-
   color: white;
+  
 }
 
 .header-main {
-  height: 100%;
-  width: 100%;
+  
+height: 100%;
+width: 100%;
   background-image: url("assets/images/supriya.png");
   position: fixed;
   background-repeat: no-repeat;
@@ -45,12 +48,20 @@ nav a {
 
 .name {
   display: flex;
-  position: absolute;
   flex-direction: column;
   top: 200px;
-  left: 5px;
-
+  left: 20px;
+  position: absolute;
 }
+
+section { 
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  color: white;
+}
+
+
 
 
 
