--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   height: 100vh;
   width: 100vw;
   color: white;
+  background-color: black;
   
 }
 
@@ -54,13 +55,30 @@ nav a {
   position: absolute;
 }
 
-section { 
-  height: 100%;
-  width: 100%;
+/* aboutme page */
+.mainabout {
   background-color: black;
-  color: white;
+
 }
 
+figure img {
+
+  background-position: center;
+  border: 1px solid black;
+  margin-top: 40px;
+ margin-left: 90px;
+ width: 200px;
+}
+
+article {
+
+  padding: 5%;
+}
+
+.mainabout h1 {
+  font-size: 2em;
+  text-align: center;
+}
 
 
 
