--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  
-
 }
 
 body {
@@ -11,13 +9,11 @@ body {
   width: 100vw;
   color: white;
   background-color: black;
-  
 }
 
 .header-main {
-  
-height: 100%;
-width: 100%;
+  height: 100%;
+  width: 100%;
   background-image: url("assets/images/supriya.png");
   position: fixed;
   background-repeat: no-repeat;
@@ -34,6 +30,7 @@ nav a {
   color: white;
   text-decoration: none;
   font-size: large;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .header-main nav {
@@ -50,28 +47,46 @@ nav a {
 .name {
   display: flex;
   flex-direction: column;
-  top: 200px;
-  left: 20px;
+  top: 170px;
+  left: 15px;
   position: absolute;
+}
+
+.name h2 {
+  font-family: "Dancing Script", cursive;
+  font-family: "Sono", sans-serif;
+  font-size: 2em;
+}
+
+.name h3 {
+  font-size: 1.2em;
+ 
+}
+
+.downloadcv {
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  background-color: white;
+  background-color: 2px solid red;
+  border-radius: 70px;
 }
 
 /* aboutme page */
 .mainabout {
   background-color: black;
-
 }
 
 figure img {
-
   background-position: center;
   border: 1px solid black;
   margin-top: 40px;
- margin-left: 90px;
- width: 200px;
+  margin-left: 90px;
+  width: 200px;
 }
 
 article {
-
   padding: 5%;
 }
 
@@ -79,8 +94,3 @@ article {
   font-size: 2em;
   text-align: center;
 }
-
-
-
-
-
