--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   width: 100%;
   background-image: url("assets/images/supriya.png");
   background-repeat: no-repeat;
-  background-position: center;
+ background-position: center;
   background-size: cover;
   color: white;
   display: flex;
@@ -27,10 +27,11 @@ body {
 }
 
 nav a {
-  color: white;
+  color:rgb(249, 243, 243);
   text-decoration: none;
   font-size: large;
   font-family: "Courier New", Courier, monospace;
+  font-weight: 800;
 }
 
 .header-main nav {
@@ -40,8 +41,9 @@ nav a {
   position: absolute;
   top: 0;
   gap: 2px;
-  border-bottom: 2px solid red;
+  border-bottom: 2px solid rgb(177, 15, 15);
   width: 100%;
+  background-color: rgb(177, 15, 15);
 }
 
 .name {
@@ -56,20 +58,30 @@ nav a {
   font-family: "Dancing Script", cursive;
   font-family: "Sono", sans-serif;
   font-size: 2em;
+  font-weight: 800px;
+ 
 }
 
 .name h3 {
   font-size: 1.2em;
+  letter-spacing: 2px;
+}
+
+.name h3 span {
+color: rgb(177, 15, 15);
 }
 
 .downloadcv {
-  width: 90px;
+  width: 110px;
   height: 40px;
   text-align: center;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  background-color: white;
-  background-color: 2px solid red;
-  border-radius: 70px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-color: rgb(177, 15, 15);
+ border: 1px solid rgb(177, 15, 15);
+  border-radius: 50px;
+  letter-spacing: 1px;
+  color: white;
+  font-weight: bolder;
 }
 
 /* about */
