give hover effect to download button

--- a/style.css
+++ b/style.css
@@ -82,7 +82,16 @@ color: rgb(177, 15, 15);
   letter-spacing: 1px;
   color: white;
   font-weight: bolder;
+  transition: .2s;
+  cursor: pointer;
 }
+
+.downloadcv:hover {
+color: rgb(177, 15, 15);
+background-color: white;
+}
+
+
 
 /* about */
 
@@ -113,3 +122,31 @@ color: rgb(177, 15, 15);
  }
 
 
+
+
+
+
+
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+  
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+  
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+  
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+  
+}
