--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   width: 100%;
   background-image: url("assets/images/supriya.png");
   background-repeat: no-repeat;
- background-position: center;
+  background-position: center;
   background-size: cover;
   color: white;
   display: flex;
@@ -27,20 +27,20 @@ body {
 }
 
 .header-main nav a {
-  color:rgb(249, 243, 243);
+  color: rgb(249, 243, 243);
   text-decoration: none;
   font-size: large;
   font-family: "Courier New", Courier, monospace;
   font-weight: 800;
   cursor: pointer;
-  transition: transform .3s;
+  transition: transform 0.3s;
 }
 
-.header-main nav a:hover{
-color: rgb(177, 15, 15);
--ms-transform: scale(1.5); 
-  -webkit-transform: scale(1.5); 
-  transform: scale(1.5); 
+.header-main nav a:hover {
+  color: rgb(177, 15, 15);
+  -ms-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
 }
 
 .header-main nav {
@@ -54,7 +54,7 @@ color: rgb(177, 15, 15);
   width: 100%;
   background-color: rgb(177, 15, 15);
   cursor: pointer;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .header-main nav:hover {
@@ -74,7 +74,6 @@ color: rgb(177, 15, 15);
   font-family: "Sono", sans-serif;
   font-size: 2em;
   font-weight: 800px;
- 
 }
 
 .name h3 {
@@ -83,70 +82,59 @@ color: rgb(177, 15, 15);
 }
 
 .name h3 span {
-color: rgb(177, 15, 15);
+  color: red;
 }
 
 .downloadcv {
   width: 110px;
   height: 40px;
   text-align: center;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   background-color: rgb(177, 15, 15);
- border: 1px solid rgb(177, 15, 15);
+  border: 1px solid rgb(177, 15, 15);
   border-radius: 50px;
   letter-spacing: 1px;
   color: white;
   font-weight: bolder;
-  transition: .2s;
+  transition: 0.2s;
   cursor: pointer;
 }
 
 .downloadcv:hover {
-color: rgb(177, 15, 15);
-background-color: white;
+  color: rgb(177, 15, 15);
+  background-color: white;
 }
-
-
-
-
 
 /* about */
 
- .about { 
+.about {
   display: flex;
   flex-direction: column;
   text-align: center;
   margin-top: 40px;
   align-items: center;
-} 
+}
 
-.about img { 
+.about img {
   height: 150px;
   width: 120px;
 }
 
-.about p { 
+.about p {
   padding: 5%;
- } 
+}
 
-.detail { 
+.detail {
   height: 25px;
   width: 80px;
   border: 2px solid red;
   text-align: center;
   border-radius: 40px;
- 
- }
+}
 
-
-
-
-
-
-
- /* Small devices (portrait tablets and large phones, 600px and up) */
+/* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  .header-main{
+  .header-main {
     background-size: contain;
     background-position: 85%;
   }
@@ -162,7 +150,6 @@ background-color: white;
   }
 
   .name h2 {
-   
     font-size: 2.2em;
     font-weight: 800px;
     letter-spacing: 2px;
@@ -174,29 +161,37 @@ background-color: white;
   }
 
   .name {
-  
-   
     padding: 2%;
     top: 250px;
-    
   }
-
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  .name {
+    
+    top: 250px;
+  padding: 5%;
+    
+  }
 
+  .name h2 {
+   
+    font-size: 2.7em;
+ 
+  }
+
+  .name h3 {
+    font-size: 1.8em;
+  
+  }
 
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-
-
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-
-
 }
