--- a/style.css
+++ b/style.css
@@ -137,12 +137,14 @@ body {
   .header-main {
     background-size: contain;
     background-position: 85%;
+    
   }
 
   .header-main nav {
     flex-direction: row;
     justify-content: space-evenly;
     height: 80px;
+    border-bottom: none;
   }
 
   .header-main nav a {
@@ -169,51 +171,41 @@ body {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .name {
-    
     top: 250px;
-  padding: 5%;
-    
+    padding: 5%;
   }
 
   .name h2 {
-   
     font-size: 2.7em;
- 
   }
 
   .name h3 {
     font-size: 1.8em;
-  
   }
-
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  /* front page */
 
-/* front page */
+  .name h2 {
+    font-size: 3em;
+  }
 
-.name h2 {
+  .name {
+    top: 170px;
+    position: absolute;
+  }
 
-  font-size: 3em;
- 
+  .header-main {
+    background-size: contain;
+    background-position: 75%;
+  }
 }
-
-.name {
-  
-  top: 170px;
-
-  position: absolute;
-}
-
-.header-main {
-background-size: contain;
-background-position: 75%;
-}
-
-}
-
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+
+
+
 }
