--- a/style.css
+++ b/style.css
@@ -111,25 +111,52 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 100px;
   align-items: center;
+
+  background-color:white;
+  color: black;
 }
 
 .about img {
   height: 150px;
-  width: 120px;
+  margin-top: 80px;
 }
 
 .about p {
-  padding: 5%;
+  padding: 5%; 
+  text-align: justify;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-size: small;
 }
+
+.aboutme h2 {
+ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ font-weight: 800px;
+}
+
+.aboutme h3 {
+  font-family: "Courier New", Courier, monospace;
+  padding: 2%;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.aboutme span {
+  color: crimson;
+}
+
+
 
 .detail {
   height: 25px;
-  width: 80px;
-  border: 2px solid red;
+  width: 90px;
+  border: 2px solid crimson;
   text-align: center;
   border-radius: 40px;
+  background-color: crimson;
+  color: white;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
