--- a/style.css
+++ b/style.css
@@ -119,7 +119,11 @@ body {
 }
 
 .about img {
-  height: 150px;
+  height: 250px;
+  margin-top: 100px;
+}
+
+.aboutme {
   margin-top: 80px;
 }
 
@@ -159,6 +163,8 @@ font-size: small;
   font-weight: 800px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 transition: transform .1s;
+display: flex;
+justify-content: center;
 }
  
 .detail:hover {
@@ -169,6 +175,15 @@ transition: transform .1s;
 
 .detail li {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+}
+
+.education {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+margin-bottom: 100px;
 }
 
 
@@ -249,12 +264,17 @@ transition: transform .1s;
  
   }
 
-  .education {
+  .detail {
     display: flex;
+    flex-direction: row;
     gap: 30px;
   }
 
-
+.education {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
 
 
 }
@@ -273,6 +293,52 @@ transition: transform .1s;
   .name h3 {
     font-size: 1.8em;
   }
+
+
+  /* about page */
+  .education{
+    flex-direction: row;
+  }
+
+  .about {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    
+  
+  }
+
+  .about-image img {
+    height: 350px;
+     padding: 8%; 
+  }
+
+  .aboutme {
+    width: 450px;
+    margin-top: 100px;
+   padding: 5%;
+
+  }
+
+  .aboutme h2 {
+    font-size: 2em;
+  }
+  .aboutme h3 {
+    font-size: 1.5em;
+  }
+
+ 
+  .education {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+
+  }
+
+
+
+  /* portfolio */
+
+
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
