--- a/style.css
+++ b/style.css
@@ -195,13 +195,47 @@ margin-bottom: 100px;
 /* portfolio */
 
 
+.header-portfolio h2 {
+  text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 800px;
+  color: white;
+
+ }
+
+ .header-portfolio h2 span{
+  color: crimson;
+ }
+ 
+
+
+
 .portfolio {
-  margin-top: 40px;
+  margin-top: 100px;
   height: 100%;
   width: 100%;
    background-color: black; 
   color: white;
+  height: 100%;
 }
+
+.portfolio-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 100px;
+}
+
+.portfolio-child img{
+  height: 200px;
+  width: 250px;
+  border: 2px solid white;
+  border-radius: 30px;
+}
+
+
+
 
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
