--- a/style.css
+++ b/style.css
@@ -254,6 +254,14 @@ margin-bottom: 100px;
 
 
 
+/* contact */
+.contact {
+  margin-top: 200px;
+  background-color: white;
+  color: black;
+}
+
+
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
@@ -325,6 +333,14 @@ margin-bottom: 100px;
   display: flex;
   flex-direction: row;
   gap: 20px;
+}
+
+
+/* project */
+
+.portfolio-parent {
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
 
