--- a/style.css
+++ b/style.css
@@ -196,7 +196,8 @@ margin-bottom: 100px;
 
 
 .header-portfolio h2 {
-  text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 800px;
   color: white;
 
@@ -255,11 +256,97 @@ margin-bottom: 100px;
 
 
 /* contact */
+
+
+
+.contact-me {
+ 
+  text-align: center;
+  padding: 18%;
+
+ 
+}
+
+.contact-me h2 {
+  color: crimson;
+  font-weight: 800px;
+  
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .contact {
   margin-top: 200px;
   background-color: white;
   color: black;
+  height: 100%;
+  width: 100%;
+ 
 }
+
+.contact-me h2 span {
+  color: black;
+  w
+}
+
+.contact img {
+  height: 20px;
+  width: 20px;
+}
+
+.contact a {
+  text-decoration: none;
+}
+
+.contact-parent ul {
+  display: flex;
+  gap: 10px;
+}
+
+.contact-parent {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.contact-child {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  gap: 40px;
+
+}
+
+.link-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.link a {
+  color: orange;
+}
+
+.name-email {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.contact-message {
+  height: 100px;
+}
+
+.contact-button {
+  height: 40px;
+  width: 100px;
+  background-color: crimson;
+  border: 1px solid crimson;
+  border-radius: 30px;
+  color: white;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-weight: 800px;
+}
+
 
 
 
@@ -464,13 +551,28 @@ margin-bottom: 100px;
   }
 
   .aboutme h2 {
-    font-size: 2.5em;
+    font-size: 3em;
   }
   .aboutme h3 {
     font-size: 1.5em;
   }
 
+  /* project */
 
+  .portfolio-parent { 
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+
+  .portfolio-child img {
+    height: 250px;
+    width: 250px;
+  }
+
+.header-portfolio h2 {
+  font-size: 3em;
+}
 
 }
 
