--- a/style.css
+++ b/style.css
@@ -258,95 +258,102 @@ margin-bottom: 100px;
 /* contact */
 
 
+.contact h2 {
 
-.contact-me {
- 
   text-align: center;
-  padding: 18%;
-
- 
-}
-
-.contact-me h2 {
   color: crimson;
-  font-weight: 800px;
-  
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 800px;
 }
+
+
 .contact {
-  margin-top: 200px;
   background-color: white;
-  color: black;
   height: 100%;
-  width: 100%;
- 
-}
-
-.contact-me h2 span {
   color: black;
-  w
+  margin-top: 200px;
+
+  padding-top: 30%;
+
 }
 
-.contact img {
+.social-contact img {
   height: 20px;
   width: 20px;
 }
 
-.contact a {
+.social-contact {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  display: inline-block;
+}
+
+.contact-left {
+  padding-left: 30%;
+}
+
+
+.contact-left img {
+  height: 20px;
+  width: 20px;
+  margin-right: 15px;
+
+
+}
+
+
+.contact-left a {
   text-decoration: none;
-}
-
-.contact-parent ul {
-  display: flex;
-  gap: 10px;
-}
-
-.contact-parent {
-  display: flex;
-  justify-content: center;
-  
-}
-
-.contact-child {
-  display: flex;
-  flex-direction: column;
-
-  align-items: center;
-  gap: 40px;
-
-}
-
-.link-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.link a {
   color: orange;
 }
 
-.name-email {
+
+
+
+
+
+
+.contact-left p {
+  margin-top: 30px;
+}
+
+.contact-btn {
+  height: 40px;
+  width: 80px;
+  background-color: crimson;
+  color: white;
+  border: 1px solid crimson;
+  border-radius: 20px;
+  font-size: 1em;
+ 
+}
+
+.contact-right form {
+  width: 100%;
+ 
+ padding-left: 20%;
+}
+.contact-right h3 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+form input, form textarea {
+  width: 80%;
+ border:1px solid;
+ outline: none;
+border-radius: 15px;
+  padding: 15px;
+ 
+}
+
+.row {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 80px;
 }
-
-.contact-message {
-  height: 100px;
-}
-
-.contact-button {
-  height: 40px;
-  width: 100px;
-  background-color: crimson;
-  border: 1px solid crimson;
-  border-radius: 30px;
-  color: white;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-weight: 800px;
-}
-
 
 
 
@@ -429,6 +436,9 @@ margin-bottom: 100px;
   display: grid;
   grid-template-columns: auto auto;
 }
+
+
+/* contact */
 
 
 }
