--- a/style.css
+++ b/style.css
@@ -3,14 +3,16 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+
 }
 
 body {
-  height: 100vh;
+   height: 100vh; 
+  
   width: 100vw;
   background-color: rgb(8, 8, 8);
   color: white;
-
+  overflow-x: hidden;
 }
 
 .header-main {
@@ -25,6 +27,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+background-attachment: fixed;
+
+
 }
 
 .header-main nav a {
@@ -46,6 +51,7 @@ body {
 
 .header-main nav {
   display: flex;
+  
   flex-direction: column;
   align-items: center;
   position: absolute;
@@ -56,6 +62,7 @@ body {
   background-color: rgb(177, 15, 15);
   cursor: pointer;
   transition: 0.4s;
+ 
 }
 
 .header-main nav:hover {
@@ -88,6 +95,7 @@ letter-spacing: 2px;
   top: 170px;
   left: 15px;
   position: absolute;
+ 
 }
 
 .name h2 {
